--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Olivier Boucher",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/OlivierBoucher/react-hot-flux-boilerplate.git"
+  },
   "license": "ISC",
   "dependencies": {
     "classnames": "^2.2.3",
