--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "flexboxgrid": "^6.3.0",
     "flux": "^2.1.1",
     "history": "^2.0.1",
+    "immutable": "^3.7.6",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-flexbox-grid": "^0.9.5",
